pg test and getPrices
