# game/docs/swagger.json
@@ -53,6 +53,41 @@
                 }
             }
         },
+        "/api/v1/game/getPrices": {
+            "get": {
+                "description": "Get prices",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Game"
+                ],
+                "summary": "Get prices",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.PriceResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/server.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/game/updateMultiplicator": {
             "post": {
                 "description": "Update multiplicator",
@@ -151,7 +186,7 @@
             "type": "object",
             "properties": {
                 "gasMining": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "gasStorage": {
                     "type": "integer"
@@ -163,7 +198,7 @@
                     "type": "integer"
                 },
                 "score": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -191,6 +226,17 @@
         },
         "server.OKStruct": {
             "type": "object"
+        },
+        "server.PriceResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "integer"
+                    }
+                }
+            }
         },
         "server.errorResponse": {
             "type": "object",
